| Summary: | ASTERISK-28863: The ast_rtp_codecs_payloads functions don't preserve order | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2020-04-29 13:49:41 | Date Closed: | 2020-05-01 10:12:41 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/RTP |
| Versions: | GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The ast_rtp_codecs_payloads functions don't preserve the order in which the payloads were specified on an incoming SDP "m" line. For Asterisk versions 17 and earlier, we didn't need that capability but for 18 we need it to properly implement the new codec negotiation capability.
| ||
| Comments: | By: Joshua C. Colp (jcolp) 2020-05-01 10:12:41.426-0500 This is going to be done a different way, specifically up a layer in the channel driver (res_pjsip_sdp_rtp in the case of PJSIP). By: Friendly Automation (friendly-automation) 2022-01-05 07:14:16.442-0600 Change 17730 merged by Friendly Automation: res_pjsip_sdp_rtp: Preserve order of RTP codecs [https://gerrit.asterisk.org/c/asterisk/+/17730|https://gerrit.asterisk.org/c/asterisk/+/17730] By: Friendly Automation (friendly-automation) 2022-01-05 07:14:56.637-0600 Change 17519 merged by Joshua Colp: res_pjsip_sdp_rtp: Preserve order of RTP codecs [https://gerrit.asterisk.org/c/asterisk/+/17519|https://gerrit.asterisk.org/c/asterisk/+/17519] By: Friendly Automation (friendly-automation) 2022-01-05 07:18:36.572-0600 Change 17731 merged by Joshua Colp: res_pjsip_sdp_rtp: Preserve order of RTP codecs [https://gerrit.asterisk.org/c/asterisk/+/17731|https://gerrit.asterisk.org/c/asterisk/+/17731] | ||